# Cortex-v3.1-RMVM---Relational-Memory-Virtual-Machine

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  rust-toolchain.toml
.ci/: dependency-manifest.sha256
.github/workflows/: determinism-ci.yml  portable-release.yml  release.yml
crates/rmvm-grpc/: Cargo.toml  README.md  build.rs
crates/rmvm-grpc/examples/: write_golden_fixtures.rs
crates/rmvm-grpc/src/: fixture_data.rs  lib.rs
crates/rmvm-grpc/tests/: transport_golden.rs
crates/rmvm-grpc/tests/fixtures/: golden_execute_request.pb
crates/rmvm-kernel/: Cargo.toml  README.md
crates/rmvm-kernel/src/: kernel.rs  lib.rs
crates/rmvm-proto/: Cargo.toml  README.md  build.rs
crates/rmvm-proto/proto/: cortex_rmvm_v3_1.proto
crates/rmvm-proto/src/: lib.rs
crates/rmvm-tests/: Cargo.toml
crates/rmvm-tests/src/: conformance.rs
crates/rmvm-tests/tests/: conformance_determinism.rs  conformance_inventory.rs  conformance_vectors.rs  kernel_conformance.rs
docs/: cortex_v3_1_rmvm_spec (1).md
docs/operations/: forget_ux_guidance.md  server_config.md
docs/quickstarts/: hello_memory_python.md  hello_memory_typescript.md
docs/release/: README.md  api_version_policy.md  conformance_suite_v1.md  forget_semantics_outline.md  golden_determinism_ci.md  publish_artifacts.md  quickstart_python_outline.md  quickstart_typescript_outline.md  release_checklist_v0_1_0.md  security_guarantees_outline.md  security_review_checklist.md
docs/security/: audit_v1.md
portable-brain-proxy/: Cargo.toml  README.md
portable-brain-proxy/crates/adapter-rmvm/: Cargo.toml
portable-brain-proxy/crates/adapter-rmvm/src/: lib.rs
portable-brain-proxy/crates/brain-store/: Cargo.toml
portable-brain-proxy/crates/brain-store/src/: lib.rs
portable-brain-proxy/crates/cortex-app/: Cargo.toml
portable-brain-proxy/crates/cortex-app/src/: cli.rs  main.rs  proxy.rs  types.rs
portable-brain-proxy/crates/planner-guard/: Cargo.toml
portable-brain-proxy/crates/planner-guard/src/: lib.rs
portable-brain-proxy/docs/: portable_brain_format.md  proxy_mode.md  security_model.md
portable-brain-proxy/scripts/: demo_m0.ps1  demo_m1.ps1  demo_m2.ps1
proto/: cortex_rmvm_v3_1_service.proto
scripts/: check_dependency_manifest_hash.ps1  check_proto_checksums.ps1  compare_conformance_summaries.ps1  export_conformance_summary.ps1  generate_conformance_vectors.ps1  update_dependency_manifest_hash.ps1
sdk/python/: LICENSE  README.md  pyproject.toml
sdk/python/cortex_rmvm_sdk/: __init__.py  client.py  plan.py  types.py
sdk/python/examples/: e2e.py  stall_retry.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/examples/: e2e.ts  stall_retry.ts
sdk/typescript/scripts/: copy-proto.mjs
sdk/typescript/src/: client.ts  index.ts  plan.ts  types.ts
tests/conformance/v1/baselines/C31-CORE-001-happy-fetch-project-assert/: expected.execute_response.cpe.pb  expected.meta.json
tests/conformance/v1/baselines/C31-CORE-002-selector-resolve-deterministic/: expected.execute_response.cpe.pb  expected.meta.json
tests/conformance/v1/baselines/C31-CORE-003-filter-by-subject/: expected.execute_response.cpe.pb  expected.meta.json
tests/conformance/v1/baselines/C31-CORE-004-join-same-entity/: expected.execute_response.cpe.pb  expected.meta.json
tests/conformance/v1/baselines/C31-CORE-005-empty-assert-bindings-reject/: expected.execute_response.cpe.pb  expected.meta.json
tests/conformance/v1/baselines/C31-COST-001-wide-select-cost-bypass/: expected.execute_response.cpe.pb  expected.meta.json
tests/conformance/v1/baselines/C31-COST-002-selector-fanout-overflow/: expected.execute_response.cpe.pb  expected.meta.json
tests/conformance/v1/baselines/C31-COST-003-join-depth-overflow/: expected.execute_response.cpe.pb  expected.meta.json
tests/conformance/v1/baselines/C31-COST-004-max-ops-overflow/: expected.execute_response.cpe.pb  expected.meta.json
tests/conformance/v1/baselines/C31-DET-001-map-order-permutation-a/: expected.execute_response.cpe.pb  expected.meta.json
tests/conformance/v1/baselines/C31-DET-002-map-order-permutation-b/: expected.meta.json
tests/conformance/v1/baselines/C31-DET-003-citation-order-permutation-a/: expected.meta.json
tests/conformance/v1/baselines/C31-DET-004-citation-order-permutation-b/: expected.execute_response.cpe.pb  expected.meta.json
tests/conformance/v1/baselines/C31-NARR-001-token-guard-unbound-number/: expected.execute_response.cpe.pb  expected.meta.json
tests/conformance/v1/baselines/C31-NARR-002-token-guard-unbound-proper-noun/: expected.meta.json
tests/conformance/v1/baselines/C31-REF-001-unknown-handle-ref/: expected.meta.json
tests/conformance/v1/baselines/C31-REF-002-unknown-selector-ref/: expected.execute_response.cpe.pb  expected.meta.json
tests/conformance/v1/baselines/C31-SEC-001-selector-spoofing/: expected.meta.json
tests/conformance/v1/baselines/C31-SEC-002-handle-spoofing/: expected.execute_response.cpe.pb  expected.meta.json
tests/conformance/v1/baselines/C31-SEC-003-broken-lineage-direct-citation/: expected.meta.json
tests/conformance/v1/baselines/C31-SEC-004-broken-lineage-transitive/: expected.execute_response.cpe.pb  expected.meta.json
tests/conformance/v1/baselines/C31-SEC-005-trust-gate-policy-tier2-required/: expected.meta.json
tests/conformance/v1/baselines/C31-SEC-006-taint-gate-web-untrusted-policy-sink/: expected.meta.json
tests/conformance/v1/baselines/C31-SEC-007-taint-gate-mixed-policy-sink/: expected.execute_response.cpe.pb  expected.meta.json
tests/conformance/v1/baselines/C31-SSA-001-register-redefinition/: expected.execute_response.cpe.pb  expected.meta.json
tests/conformance/v1/baselines/C31-SSA-002-use-before-define/: expected.execute_response.cpe.pb  expected.meta.json
tests/conformance/v1/baselines/C31-SSA-003-register-smuggling-value-ref/: expected.execute_response.cpe.pb  expected.meta.json
tests/conformance/v1/baselines/C31-STALL-001-offline-fetch-stall/: expected.execute_response.cpe.pb  (+1 more)
tests/conformance/v1/schema/: vector.schema.json
(+40 files in other folders)
