[workspace]
members = [
  "crates/brain-store",
  "crates/adapter-rmvm",
  "crates/planner-guard",
  "crates/cortex-app",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
axum = "0.8.4"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
dirs = "6.0.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand = "0.8.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "net"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

# Reuse existing RMVM contract crates from parent repo.
rmvm-grpc = { path = "../crates/rmvm-grpc" }
rmvm-proto = { path = "../crates/rmvm-proto" }
