[package]
name = "rmvm-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
description = "Cortex v3.1 RMVM protobuf types and deterministic hashing helpers."
keywords = ["rmvm", "protobuf", "deterministic", "memory", "cortex"]
categories = ["api-bindings", "encoding"]
include = [
  "build.rs",
  "Cargo.toml",
  "README.md",
  "src/**",
  "proto/**"
]

[dependencies]
hex.workspace = true
prost.workspace = true
prost-types.workspace = true
sha2.workspace = true

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true
