[package]
name = "brain-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
base64.workspace = true
chrono.workspace = true
chacha20poly1305.workspace = true
clap.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile = "3.23.0"
