[package]
name = "cortex-app"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cortex"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
rmvm-grpc.workspace = true
rmvm-proto.workspace = true
brain-store = { path = "../brain-store" }
adapter-rmvm = { path = "../adapter-rmvm" }
planner-guard = { path = "../planner-guard" }
base64.workspace = true
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tonic = "0.14.5"

[dev-dependencies]
tempfile = "3.23.0"
